Fix label help icon when label gets too long

--- a/public/css/icinga/forms.less
+++ b/public/css/icinga/forms.less
@@ -198,7 +198,6 @@ form label.has-feedback:after {
   font-weight: normal;
   speak: none;
 
-  display: inline-block;
   text-decoration: inherit;
   width: 1em;
   margin-right: .2em;
